# ops-health-core

./: .gitattributes  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  FORMULAS.md  INTEGRATION_GUIDE.md
ops_health_core/: cli.py  contracts.py  kill_switch.py  scorer.py  windows.py
tests/: test_fail_closed_on_exception.py  test_invariant_0_domain_agnosticism.py  test_invariant_2_no_cross_core_imports.py  test_invariant_ci_0_workflow_hygiene.py  test_invariant_ops_formulas_drift.py  test_pkg_1_no_examples_packaged.py
