[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ops-health-core"
version = "0.1.1"
description = "Ops-Health Core: Operational safety signals, rate-limit budgets, latency watchdog, kill-switch recommendations"
requires-python = ">=3.11"
dependencies = [
    "decision-schema>=0.2,<0.3",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff"]

[project.scripts]
ops-health = "ops_health_core.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ops_health_core*"]

[tool.ruff]
line-length = 100
target-version = "py311"
